fix line break on list items

--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,7 @@ input, textarea {
 }
 
 .notes-list-item {
+    overflow-wrap: break-word;
     padding: 10px;
     border-top: 1px solid ;
 }
